# funasr_input_linux

./: .env.example  .gitignore  LICENSE  README.md  config.example.toml  config.toml  conftest.py  pyproject.toml  start.ps1  start.sh
docs/superpowers/plans/: 2026-06-09-llm-polish.md  2026-06-09-streaming-preview.md
docs/superpowers/specs/: 2026-06-09-streaming-preview-llm-polish-design.md
src/funasr_input/: __init__.py  __main__.py  asr.py  audio.py  config.py  ime.py  input.py  live.py  polish.py  presets.py  preview.py
tests/integration/: test_e2e.py
tests/unit/: test_asr.py  test_audio.py  test_audio_window.py  test_config.py  test_ime_live.py  test_ime_polish.py  test_input.py  test_live.py  test_polish.py  test_polish_queue.py  test_presets.py  test_preview.py
