[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funasr-input"
version = "0.1.0"
description = "基于 FunASR 的 Windows 语音输入法"
license = {text = "MIT"}
authors = [{name = "zhuta"}]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["asr", "speech-to-text", "voice-input", "windows", "ime"]
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "keyboard>=0.13.5",
    "soundfile>=0.12",
    "funasr>=1.3.9",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"funasr_input" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["funasr_input"]
omit = ["*/tests/*"]
