[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funasr-input"
version = "0.1.0"
description = "基于 FunASR 的 Windows 语音输入法"
license = {text = "MIT"}
authors = [{name = "zhuta"}]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["asr", "speech-to-text", "voice-input", "windows", "ime"]
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "keyboard>=0.13.5",
    "soundfile>=0.12",
    "funasr>=1.3.9",
    # torch 2.6+ 会让 funasr 1.3.9 加载模型时 deepcopy 触发原生崩溃；锁在 2.5.x。
    "torch>=2.4,<2.6",
    "torchaudio>=2.4,<2.6",
    # Fun-ASR-Nano 用 Qwen3 骨干（transformers>=4.51 才有），但 transformers 5.x
    # 在 import 时硬依赖 torch.float8_e8m0fnu（需 torch>=2.8），与上面的 torch 上限冲突。
    # 因此卡在含 Qwen3、又不要 float8 的 4.53.x。
    "transformers>=4.51,<5",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"funasr_input" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["funasr_input"]
omit = ["*/tests/*"]
